fixing z-index

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ canvas
 	position: fixed;
 	top: 0;
 	left: 0;
-	z-index: 1; 
+	z-index: -1; 
 }
 
 #content
